--- a/reservas.html
+++ b/reservas.html
@@ -12,52 +12,48 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,300&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=IM+Fell+Double+Pica:ital@1&display=swap" rel="stylesheet">
      
     <title>Panza & Corazón- Reservas</title>
 </head>
 <body>
-    <header class="fondo">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark menu">
-            <div class="container-fluid display">
-                <a class="navbar-brand" href="#"></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                  <ul class="navbar-nav menunav">
-                    <li class="nav-item">
-                      <a class="nav-link active link" aria-current="page" href="./index.html">Nosotros</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link link" href="./index.html#Galeria">Galeria</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link link" href="./sucursales.html">Sucursales</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link link" href="./menu-ejecutivo.html">Menu Ejecutivo</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link link" href="./reservas.html">Reservas</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link link" href="./contacto.html">Contacto</a>
-                    </li>
-                  </ul>
-                </div>
-              </div>
-            </nav>
-       <h1>
-           Panza & Corazón
-       </h1>         
-    </header>
-    <main>
+	<header class="fondo">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fondo__menu">
+			<div class="container-fluid display">
+				<a class="navbar-brand" href="#"></a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				  <span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+				  <ul class="navbar-nav menunav">
+					<li class="nav-item">
+					  <a class="nav-link active link" aria-current="page" href="./index.html#Nosotros">Nosotros</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link link" href="./index.html#Galeria">Galeria</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link link" href="./sucursales.html">Sucursales</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link link" href="./menu-ejecutivo.html">Menu Ejecutivo</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link link" href="./reservas.html">Reservas</a>
+					</li>
+					<li class="nav-item">
+					  <a class="nav-link link" href="./contacto.html">Contacto</a>
+					</li>
+				  </ul>
+				</div>
+			  </div>
+			</nav>
+	   <h1>
+		   Panza & Corazón
+	   </h1>         
+	</header>
+  <main>
         <section class="contenedorReservas">
 			<div class="container border border-light bg-light">
 				<h3>Reservas</h3>
