--- a/reservas.html
+++ b/reservas.html
@@ -7,7 +7,6 @@
     <meta name="keywords" content="restaurante, comida, chef, gourmet, platos, food, pastas, carnes, cocina, cocinero, buenos aires, ">
     <meta name="description" content="Calificado como unos de los restaurantes mas sofisticados de Buenos Aires, Panza & Corazón te invita a que conozcas nuestros priviligiados restaurantes y una comida para llenarte de un sin fin de emociones">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="style.css"> -->
     <link rel="stylesheet" href="./sass/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -63,7 +62,6 @@
 						<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="alguien@alguien.com">
                        <div id="emailHelp" class="form-text">Jamas compartiremos su correo electronico.</div>
 					</div>
-						<!-- <label for="Sucursal"> Sucursal</label> -->
 					<select class="form-select" aria-label="Default select example" class="sucursales" name="Sucursal">
 						    <option selected>Sucursales</option>
 							<option value="PuertoMadero">Puerto Madero</option>
@@ -71,7 +69,6 @@
 							<option value="palermo">Palermo</option>
 							<option value="SanIsidro">San Isidro</option> 
 					</select> <br> <br>
-					<!-- <label for="Personas">Personas</label> -->
 					<select class="form-select" aria-label="Default select example" class="personas" name="Personas" id="Personas">
 						    <option selected>Personas</option>
 							<option value="1">1</option>
@@ -88,7 +85,6 @@
 					<div class="mb-3">
 						<label for="Calenderio" class="form-label">Fecha</label>
 						<input type="date" name="calendario"> 
-						<!-- <label for="Hora">Horario</label> -->
 					</div>
 					<div class="mb-3">
 						<select class="form-select" aria-label="Default select example" class="hora" name="Hora" id="Hora">
@@ -140,10 +136,10 @@
     <footer>
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6568.590725986395!2d-58.394844!3d-34.596692!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x518ad4850449560!2sLa%20Parolaccia%20Barrio%20Norte!5e0!3m2!1ses!2sus!4v1623773133102!5m2!1ses!2sus" width="100%" height="200px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         <hr>
-        <h5>
+        <h6>
             © 2021 Panza & Corazón All Rights Reserved.
-        </h5>
-        <div class="contenedor2">
+        </h6>
+        <div class="footer__conteiner">
             <img src="imagenes/icons8-twitter-30.png" alt="icono de twitter">
             <img src="imagenes/icons8-instagram-30.png" alt="icono de instragram">
             <img src="imagenes/icons8-facebook-30.png" alt="icono de facebook">
