--- a/menu-ejecutivo.html
+++ b/menu-ejecutivo.html
@@ -8,7 +8,6 @@
     <meta name="keywords" content="restaurante, comida, chef, gourmet, platos, food, pastas, carnes, cocina, cocinero, buenos aires, ">
     <meta name="description" content="Calificado como unos de los restaurantes mas sofisticados de Buenos Aires, Panza & Corazón te invita a que conozcas nuestros priviligiados restaurantes y una comida para llenarte de un sin fin de emociones">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- <link rel="stylesheet" href="style.css"> -->
     <link rel="stylesheet" href="./sass/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -57,61 +56,67 @@
     <main class="fondoMenu">
         <section class="menuContainer">
           <div class="menuContainer__divs menuLunes">
-              <h3>Lunes</h3>          
+            <div>   
+              <h3 class="diaSemana">Lunes</h3>     
+            </div>
+            <div class="img-p">       
               <figure>
                 <img src="imagenes/ejecutivoOsobuco.jpg" width="250px" height="250px" alt="plato de osobuco con guarnicion">
                 <figcaption>$550</figcaption>
               </figure>
               <p> Osobucco en coccion lenta con salsa de champiñones y tu guarnicion favorita</p>
-            </div>
-            <div class="menuContainer__divs menuMartes">  
-              <h3>Martes</h3>             
+            </div> 
+          </div>
+          <div class="menuContainer__divs menuMartes">  
+            <div>
+                <h3 class="diaSemana">Martes</h3>
+            </div>  
+            <div class="img-p">           
               <figure>           
                 <img src="imagenes/ejecutivoRibs.jpg" width="250px" height="250px" alt="plato de ribs a la barbacoa">
               <figcaption>$650</figcaption>
               </figure> 
               <p> Ribs coccion lenta con barbacoa y tu guarnicion preferida </p>
-            </div>
-            <div class="menuContainer__divs menuMiercoles">
-                <h3>Miercoles</h3>               
-                <figure>           
-                  <img src="imagenes/ejecutivoMilanesa.jpg" width="250px" height="250px" alt="plato de milanesa con guarnicion">
-                <figcaption>$500</figcaption>
-                </figure> 
-                <p>Milanesa de Peceto con tu guarnicion preferida</p>
-            </div>
-            <div class="menuContainer__divs menuJueves"> 
-                <h3>Jueves</h3>            
-                <figure>               
-                  <img src="imagenes/ejecutiboOjodebife.jpg" width="250px" height="250px" alt="Ojo de bife con guarnicion">
-                <figcaption>$750</figcaption>
-                </figure>
-                <p>Ojo de bife de 400g al romero, acompañado con tu guarnicion preferida</p>
-            </div>
+            </div> 
+          </div>
+          <div class="menuContainer__divs menuMiercoles">
+            <div>  
+              <h3 class="diaSemana">Miercoles</h3>  
+            </div>             
+            <div class="img-p"> 
+              <figure>           
+                <img src="imagenes/ejecutivoMilanesa.jpg" width="250px" height="250px" alt="plato de milanesa con guarnicion">
+              <figcaption>$500</figcaption>
+              </figure> 
+              <p>Milanesa de Peceto con tu guarnicion preferida</p>
+            </div> 
+          </div>
+          <div class="menuContainer__divs menuJueves"> 
+            <div>   
+              <h3 class="diaSemana">Jueves</h3> 
+            </div> 
+            <div class="img-p">           
+              <figure>               
+                <img src="imagenes/ejecutiboOjodebife.jpg" width="250px" height="250px" alt="Ojo de bife con guarnicion">
+              <figcaption>$750</figcaption>
+              </figure>
+              <p>Ojo de bife de 400g al romero, acompañado con tu guarnicion preferida</p>
+            </div>  
+          </div>
         </section>
-        <!-- <section class="contenedormenu2">
-            <h4>Guarniciones</h4>           
-            <p> Puré de papas, Puré de calabaza, Papas al horno, Papas al natural, Gratín de papas, Mix de verduras</p>   
-        </section> -->
- 
-
-
-
-
     </main>
     <footer>
         <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6568.590725986395!2d-58.394844!3d-34.596692!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x518ad4850449560!2sLa%20Parolaccia%20Barrio%20Norte!5e0!3m2!1ses!2sus!4v1623773133102!5m2!1ses!2sus" width="100%" height="200px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         <hr>
-        <h5>
+        <h6>
             © 2021 Panza & Corazón All Rights Reserved.
-        </h5>
-        <div class="contenedor2">
-            <img src="imagenes/icons8-twitter-30.png" alt="icono de twitter">
-            <img src="imagenes/icons8-instagram-30.png" alt="icono de instragram">
-            <img src="imagenes/icons8-facebook-30.png" alt="icono de facebook">
+        </h6>
+        <div class="footer__conteiner">
+          <img src="imagenes/icons8-twitter-30.png" alt="icono de twitter">
+          <img src="imagenes/icons8-instagram-30.png" alt="icono de instragram">
+          <img src="imagenes/icons8-facebook-30.png" alt="icono de facebook">
         </div>
-
-    </footer>
-    
+    </footer> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>  
 </body>
 </html>
