--- a/sucursales.html
+++ b/sucursales.html
@@ -102,17 +102,15 @@
     </main>
     <footer>
       <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6568.590725986395!2d-58.394844!3d-34.596692!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x518ad4850449560!2sLa%20Parolaccia%20Barrio%20Norte!5e0!3m2!1ses!2sus!4v1623773133102!5m2!1ses!2sus" width="100%" height="200px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-
         <hr>
         <h6>
             © 2021 Panza & Corazón All Rights Reserved.
         </h6>
-        <div class="contenedor2">
+        <div class="footer__conteiner">
             <img src="imagenes/icons8-twitter-30.png" alt="icono de twitter">
             <img src="imagenes/icons8-instagram-30.png" alt="icono de instragram">
             <img src="imagenes/icons8-facebook-30.png" alt="icono de facebook">
         </div>
-
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
