--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
 <body>  
     <header class="fondo">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fondo__menu">
+            <div class="logo">
+             <a href="./index.html"> <img src="./imagenes/logo.png" width="300px" height="50px" alt=""> </a>
+            </div>
             <div class="container-fluid display">
                 <a class="navbar-brand" href="#"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,7 +53,8 @@
             </nav>
        <h1>
            Panza & Corazón
-       </h1>         
+       </h1>  
+       <a href="reservas.html#Reservas"><button class="boton-reservar">RESERVA TU LUGAR</button></a>       
  </header>            
   <main>
       <section id="Nosotros" class="primeraSeccion">
@@ -88,16 +92,18 @@
       <p class="segundaSeccion__p2">trabajaconnosotros@panzaycorazon.com</p>
     </section>
     <section class="terceraSeccion">
-      <div class="terceraSeccion__container">
-        <div class="terceraSeccion__p">
-          <h3 class="title-titulos">Jefe De Cocina</h3> 
-          <p class="title-texto">Como Chef graduado en Licenciatura en Gastronomia, puedo decirle que todo lo que vea en el menú será exactamente lo mismo que le servirán en nuestro lugar. Para mí, personalmente, ¡La calidad inquebrantable de todos los ingredientes que usamos en nuestros platos es vital!</p>
-          <p class="pp title-subtitulos">¡Te esperamos!</p>
+      <div> 
+        <div class="terceraSeccion__container">
+          <div class="terceraSeccion__p">
+            <h3 class="title-titulos">Jefe De Cocina</h3> 
+            <p class="title-texto">Como Chef graduado en Licenciatura en Gastronomia, puedo decirle que todo lo que vea en el menú será exactamente lo mismo que le servirán en nuestro lugar. Para mí, personalmente, ¡La calidad inquebrantable de todos los ingredientes que usamos en nuestros platos es vital!</p>
+            <p class="pp title-subtitulos">¡Te esperamos!</p> 
+          </div>
+          <div class="container-img-terceraSeccion">
+            <img src="./imagenes/img-terceraSeccion.png" alt="">
+          </div>
         </div>
-        <div class="container-img-terceraSeccion">
-          <img src="./imagenes/img-terceraSeccion.jpg" alt="">
-        </div>
-      </div>
+    </div>
     </section> 
   </main>
     <footer>
@@ -108,9 +114,9 @@
             © 2021 Panza & Corazón All Rights Reserved.
       </h6>
       <div class="footer__conteiner">
-        <img src="imagenes/icons8-twitter-30.png" alt="icono de twitter">
-        <img src="imagenes/icons8-instagram-30.png" alt="icono de instragram">
-        <img src="imagenes/icons8-facebook-30.png" alt="icono de facebook">
+        <img src="./imagenes/logo-facebook-24px.png" alt="icono de twitter">
+        <img src="./imagenes/logo-instagram-24px.png" alt="icono de pinstragram">
+        <img src="./imagenes/logo-twitter-24px.png" alt="icono de facebook">
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
