--- a/reservas.html
+++ b/reservas.html
@@ -19,6 +19,9 @@
 <body>
 	<header class="fondo">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fondo__menu">
+			<div class="logo">
+				<a href="./index.html"> <img src="./imagenes/logo.png" width="300px" height="50px" alt=""> </a>
+			   </div>
 			<div class="container-fluid display">
 				<a class="navbar-brand" href="#"></a>
 				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,7 +30,7 @@
 				<div class="collapse navbar-collapse" id="navbarNav">
 				  <ul class="navbar-nav menunav">
 					<li class="nav-item">
-					  <a class="nav-link active link" aria-current="page" href="./index.html#Nosotros">Nosotros</a>
+					  <a class="nav-link link" aria-current="page" href="./index.html#Nosotros">Nosotros</a>
 					</li>
 					<li class="nav-item">
 					  <a class="nav-link link" href="./index.html#Galeria">Galeria</a>
@@ -39,7 +42,7 @@
 					  <a class="nav-link link" href="./menu-ejecutivo.html">Menu Ejecutivo</a>
 					</li>
 					<li class="nav-item">
-					  <a class="nav-link link" href="./reservas.html">Reservas</a>
+					  <a class="nav-link active link" href="./reservas.html">Reservas</a>
 					</li>
 					<li class="nav-item">
 					  <a class="nav-link link" href="./contacto.html">Contacto</a>
@@ -50,10 +53,11 @@
 			</nav>
 	   <h1>
 		   Panza & Corazón
-	   </h1>         
+	   </h1>  
+	   <a href="reservas.html#Reservas"><button class="boton-reservar">RESERVA TU LUGAR</button></a>           
 	</header>
   <main>
-        <section class="contenedorReservas">
+        <section id="Reservas" class="contenedorReservas">
 			<div class="container border border-light bg-light">
 				<h3>Reservas</h3>
              	<form action="" >
@@ -139,11 +143,11 @@
         <h6>
             © 2021 Panza & Corazón All Rights Reserved.
         </h6>
-        <div class="footer__conteiner">
-            <img src="imagenes/icons8-twitter-30.png" alt="icono de twitter">
-            <img src="imagenes/icons8-instagram-30.png" alt="icono de instragram">
-            <img src="imagenes/icons8-facebook-30.png" alt="icono de facebook">
-        </div>
+		<div class="footer__conteiner">
+			<img src="./imagenes/logo-facebook-24px.png" alt="icono de twitter">
+			<img src="./imagenes/logo-instagram-24px.png" alt="icono de pinstragram">
+			<img src="./imagenes/logo-twitter-24px.png" alt="icono de facebook">
+			</div>
 
     </footer>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> 
