--- a/sucursales.html
+++ b/sucursales.html
@@ -20,6 +20,9 @@
 <body>
   <header class="fondo">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fondo__menu">
+      <div class="logo">
+        <a href="./index.html"> <img src="./imagenes/logo.png" width="300px" height="50px" alt=""> </a>
+       </div>
         <div class="container-fluid display">
             <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -28,13 +31,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav menunav">
                 <li class="nav-item">
-                  <a class="nav-link active link" aria-current="page" href="./index.html#Nosotros">Nosotros</a>
+                  <a class="nav-link link" aria-current="page" href="./index.html#Nosotros">Nosotros</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link link" href="./index.html#Galeria">Galeria</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link link" href="./sucursales.html">Sucursales</a>
+                  <a class="nav-link active link" href="./sucursales.html">Sucursales</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link link" href="./menu-ejecutivo.html">Menu Ejecutivo</a>
@@ -51,7 +54,8 @@
         </nav>
    <h1>
        Panza & Corazón
-   </h1>         
+   </h1> 
+   <a href="reservas.html#Reservas"><button class="boton-reservar">RESERVA TU LUGAR</button></a>            
 </header>  
  <main>
       <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
@@ -64,28 +68,28 @@
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="10000">
             <img src="./imagenes/Sucursales1.jpg" class="d-block w-100" alt="Sucursal de San Isidro">
-            <div class="carousel-caption d-none d-md-block">
-              <h5 class="display-1 titulo">San Isidro</h5>
+            <div class="carousel-caption d-none d-md-block titulo-sucursales">
+              <h5 class="display-1 ">San Isidro</h5>
               <p>Tel 4455-4589</p>
             </div>
           </div>
           <div class="carousel-item" data-bs-interval="2000">
             <img src="./imagenes/Sucursales2.jpg" class="d-block w-100" alt="Sucursal de Puerto Madero">
-            <div class="carousel-caption d-none d-md-block">
-              <h5 class="display-1 titulo">Puerto Madero</h5>
+            <div class="carousel-caption d-none d-md-block titulo-sucursales">
+              <h5 class="display-1 titulo-puertomadero">Puerto Madero</h5>
               <p>Tel 4596-9785</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="./imagenes/Sucursales3.jpg" class="d-block w-100" alt="Sucursal de Belgrano">
-            <div class="carousel-caption d-none d-md-block">
+            <img src="./imagenes/Sucursales5.jpg" class="d-block w-100" alt="Sucursal de Belgrano">
+            <div class="carousel-caption d-none d-md-block titulo-sucursales">
               <h5 class="display-1 titulo">Belgrano</h5>
               <p>Tel 4152-9532</p>
             </div>
           </div>
             <div class="carousel-item">
               <img src="./imagenes/Sucursales4.jpg" class="d-block w-100" alt="Sucursal de Palermo">
-              <div class="carousel-caption d-none d-md-block">
+              <div class="carousel-caption d-none d-md-block titulo-sucursales">
                 <h5 class="display-1 titulo">Palermo</h5>
                 <p>Tel 4716-9534</p>
               </div>
@@ -107,10 +111,10 @@
             © 2021 Panza & Corazón All Rights Reserved.
         </h6>
         <div class="footer__conteiner">
-            <img src="imagenes/icons8-twitter-30.png" alt="icono de twitter">
-            <img src="imagenes/icons8-instagram-30.png" alt="icono de instragram">
-            <img src="imagenes/icons8-facebook-30.png" alt="icono de facebook">
-        </div>
+          <img src="./imagenes/logo-facebook-24px.png" alt="icono de twitter">
+          <img src="./imagenes/logo-instagram-24px.png" alt="icono de pinstragram">
+          <img src="./imagenes/logo-twitter-24px.png" alt="icono de facebook">
+          </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
