--- a/reservas.html
+++ b/reservas.html
@@ -58,8 +58,8 @@
 	</header>
   <main>
         <section id="Reservas" class="contenedorReservas">
-			<div class="container border border-light bg-light">
-				<h3>Reservas</h3>
+			<div class="container border border-light bg-light div-contenedorReservas">
+				<h3 class="titulo-reservas">Reservas</h3>
              	<form action="" >
 					<div class="mb-3">
 						<label for="exampleInputEmail1" class="form-label">Correo electronico</label>
@@ -128,13 +128,12 @@
 						<span class="input-group-text">Deja un comentario</span>
 						<textarea class="form-control" aria-label="With textarea"></textarea>
 					</div>
-					<div class="reserv-bottom d-inline-flex mb-3">
-						<input type="submit"  class="btn btn-warning w-25  d-inline-block m-auto" value="Enviar formulario">
-						<input type="reset" class="btn btn-secondary w-25  d-inline-block m-auto" value="Limpiar formulario">   
+					<div class="reserv-bottom d-inline-flex mb-3 botones-reserva">
+						<input type="submit"  class="btn btn-warning w-25  d-inline-block m-auto botones-reserva1" value="Enviar formulario">
+						<input type="reset" class="btn btn-secondary w-25  d-inline-block m-auto botones-reserva2" value="Limpiar formulario">   
 					</div>
-				</div>
 				</form>
-			
+			</div>
        </section>
     </main>
     <footer>
