--- a/contacto.html
+++ b/contacto.html
@@ -13,9 +13,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@1,300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=IM+Fell+Double+Pica:ital@1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
      
     <title>Panza & Corazón- Contacto</title>
 </head>
+<body>
 <header class="fondo">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fondo__menu">
       <div class="logo">
@@ -53,39 +55,72 @@
  <h1>
      Panza & Corazón
  </h1>   
- <a href="reservas.html#Reservas"><button class="boton-reservar">RESERVA TU LUGAR</button></a>          
+ <a href="reservas.html#Reservas">
+   <button class="boton-reservar">RESERVA TU LUGAR</button>
+  </a>          
 </header>
-    <main>
-        <form class="contacto" action="">
-            <fieldset class="formulario">
-                <legend> <h4>Contactanos</h4></legend>
-                <label for="Nombre">Nombre</label>
-                <input type="text" id="Nombre" name="Nombre"> <br> <br>
-                <label for="Email">Email</label> 
-                <input type="email" id="Email"  name="email" placeholder="nombre@ejemplo.com"> <br><br>
-                <div>Mayor de 18 años</div>
-                <input type="radio" name="edad" value="mayor">
-                <div>Menor de 18 años</div>
-                <input type="radio" name="edad" value="menor"><br><br>
-                <label for="Comentario">Comentario</label><br>
-                <textarea name="Comentarios" cols="20" rows="5"></textarea> <br>
-                <input type="submit" value="Enviar" >
-                <input type="reset" value="Limpiar">
-                <h5>Quiero que me envien notificaciones</h5>
-                <input type="checkbox" name="acepta" value="1">            
-            </fieldset>
-    </main>
+  <main>
+    <section class="contenedorContacto1">
+      <div class="bife-contacto"></div>
+      <div class="texto-contacto">
+        <p class="p1-contacto"> - El NEGOCIO DE TUS SUEÑOS -</p>
+        <P class="p2-contacto"> FRANQUICIATE </P>
+        <a href="#contacto"><button class="button-contacto">CONSULTA</button></a>
+      </div>
+      <div class="vino-contacto"></div>
+      <div class="cupcake-contacto"></div>
+      <div class="canapes-contacto"></div>
+    </section>
+    <section class="contenedorContacto2">
+      <div class="imagen1-contacto"></div>
+      <div class="texto1-contacto">
+        <h3>CAPACITACION AL FRANQUICIADO</h3>
+        <P>Garantizamos a través de nuestros capacitadores lo que hacemos en nuestro local todos los días: un producto único en un ambiente distendido.</P>
+      </div>
+    </section>
+    <section class="contenedorContacto3">
+      <div class="imagen2-contacto"></div>
+      <div class="texto2-contacto">
+        <h3>LLAVE EN MANO</h3>
+        <P>¡Entregamos el negocio totalmente armado y listo para que comience a facturar!
+        </P>
+      </div>
+    </section>
+    <section class="contenedorFormulario">
+      <form class="formulario" action="" id="contacto">
+        <fieldset class="formulario" >
+          <legend> <h4>CONTACTANOS</h4></legend>
+          <label for="Nombre">Nombre</label>
+          <input type="text" id="Nombre" name="Nombre"> <br> <br>
+          <label for="Email">Email</label> 
+          <input type="email" id="Email"  name="email" placeholder="nombre@ejemplo.com"> <br><br>
+          <label for="mas18">Mayor de 18 años</label>
+          <input type="radio" name="edad" value="mayor"><br><br>
+          <label for="menos18">Menor de 18 años</label>
+          <input type="radio" name="edad" value="menor"><br><br>
+          <label for="Comentario">Comentario</label><br>
+          <textarea name="Comentarios" cols="20" rows="5"></textarea> <br><br>
+          <input class="boton-formulario"  type="submit" value="Enviar" >
+          <input class="boton-formulario" type="reset" value="Limpiar">
+        </fieldset>
+      </form>
+      <div class="contenedorFormulario-texto">
+        <h3>¿QUERES MAS INFO?</h3>
+        <h4>ESCRIBINOS!</h4>
+      </div>
+  </section>
+  </main>
     <footer>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6568.590725986395!2d-58.394844!3d-34.596692!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x518ad4850449560!2sLa%20Parolaccia%20Barrio%20Norte!5e0!3m2!1ses!2sus!4v1623773133102!5m2!1ses!2sus" width="100%" height="200px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        <hr>
-        <h6>
-            © 2021 Panza & Corazón All Rights Reserved.
-        </h6>
-        <div class="footer__conteiner">
-          <img src="./imagenes/logo-facebook-24px.png" alt="icono de twitter">
-          <img src="./imagenes/logo-instagram-24px.png" alt="icono de pinstragram">
-          <img src="./imagenes/logo-twitter-24px.png" alt="icono de facebook">
-          </div>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d6568.590725986395!2d-58.394844!3d-34.596692!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x518ad4850449560!2sLa%20Parolaccia%20Barrio%20Norte!5e0!3m2!1ses!2sus!4v1623773133102!5m2!1ses!2sus" width="100%" height="200px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      <hr>
+      <h6>
+       © 2021 Panza & Corazón All Rights Reserved.
+      </h6>
+      <div class="footer__conteiner">
+        <img src="./imagenes/logo-facebook-24px.png" alt="icono de twitter">
+        <img src="./imagenes/logo-instagram-24px.png" alt="icono de pinstragram">
+        <img src="./imagenes/logo-twitter-24px.png" alt="icono de facebook">
+      </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> 
 </body>
