--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>  
     <header class="fondo">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fondo__menu">
-            <div class="logo">
+            <div class="logo">   
              <a href="./index.html"> <img src="./imagenes/logo.png" width="300px" height="50px" alt=""> </a>
             </div>
             <div class="container-fluid display">
@@ -54,6 +54,17 @@
        <h1>
            Panza & Corazón
        </h1>  
+       <div class="fondo__redes">
+        <a href=" ">
+          <img class="img-footer" src="./imagenes/logo-facebook-24px.png" alt="icono de twitter">
+        </a>
+        <a href="">
+          <img src="./imagenes/logo-instagram-24px.png" alt="icono de pinstragram">
+        </a>
+        <a href=""> 
+          <img src="./imagenes/logo-twitter-24px.png" alt="icono de facebook">
+         </a>
+        </div>
        <a href="reservas.html#Reservas"><button class="boton-reservar">RESERVA TU LUGAR</button></a>       
  </header>            
   <main>
@@ -86,18 +97,31 @@
         </section>
     </div>
     <section class="segundaSeccion">
-      <img class="segundaSeccion__imagen1" src="imagenes/email.png" width="90px" height="60px" alt="imagen de correo electronico">
-      <p class="segundaSeccion__p1">franquicias@panzaycorazon.com</p>
-      <img class="segundaSeccion__imagen2" src="imagenes/email.png"  width="90px" height="60px" alt="imagen de correo electronico">
-      <p class="segundaSeccion__p2">trabajaconnosotros@panzaycorazon.com</p>
+      <div class="segundaSeccion__div1">  
+          <img class="segundaSeccion__imagen1" src="imagenes/email.png" width="90px" height="60px" alt="imagen de correo electronico">
+          <p class="segundaSeccion__p1">
+            franquicias@panzaycorazon.com
+          </p>
+      </div>
+      <div class="segundaSeccion__div2"> 
+          <img class="segundaSeccion__imagen2" src="imagenes/email.png"  width="90px" height="60px" alt="imagen de correo electronico">
+          <p class="segundaSeccion__p2">
+            trabajaconnosotros@panzaycorazon.com
+          </p>
+      </div>
     </section>
     <section class="terceraSeccion">
       <div> 
         <div class="terceraSeccion__container">
           <div class="terceraSeccion__p">
             <h3 class="title-titulos">Jefe De Cocina</h3> 
-            <p class="title-texto">Como Chef graduado en Licenciatura en Gastronomia, puedo decirle que todo lo que vea en el menú será exactamente lo mismo que le servirán en nuestro lugar. Para mí, personalmente, ¡La calidad inquebrantable de todos los ingredientes que usamos en nuestros platos es vital!</p>
-            <p class="pp title-subtitulos">¡Te esperamos!</p> 
+            <p class="title-texto">Como Chef graduado en Licenciatura en Gastronomia, puedo decirle que todo lo que vea en el menú será exactamente lo mismo que le servirán en nuestro lugar. Para mí, personalmente, ¡La calidad inquebrantable de todos los ingredientes que usamos en nuestros platos es vital!</p> 
+            <a href="reservas.html#Reservas">
+              <button class="boton-teEsperamos">
+              ¡TE ESPERAMOS!
+              </button>
+            </a>
+       
           </div>
           <div class="container-img-terceraSeccion">
             <img src="./imagenes/img-terceraSeccion.png" alt="">
@@ -114,7 +138,7 @@
             © 2021 Panza & Corazón All Rights Reserved.
       </h6>
       <div class="footer__conteiner">
-        <img src="./imagenes/logo-facebook-24px.png" alt="icono de twitter">
+        <img class="img-footer" src="./imagenes/logo-facebook-24px.png" alt="icono de twitter">
         <img src="./imagenes/logo-instagram-24px.png" alt="icono de pinstragram">
         <img src="./imagenes/logo-twitter-24px.png" alt="icono de facebook">
         </div>
