--- a/contacto.html
+++ b/contacto.html
@@ -18,48 +18,56 @@
     <title>Panza & Corazón- Contacto</title>
 </head>
 <body>
-<header class="fondo">
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fondo__menu">
-      <div class="logo">
-        <a href="./index.html"> <img src="./imagenes/logo.png" width="300px" height="50px" alt=""> </a>
-      </div>
-      <div class="container-fluid display">
-          <a class="navbar-brand" href="#"></a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav menunav">
-              <li class="nav-item">
-                <a class="nav-link  link" aria-current="page" href="./index.html#Nosotros">Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link link" href="./index.html#Galeria">Galeria</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link link" href="./sucursales.html">Sucursales</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link link" href="./menu-ejecutivo.html">Menu Ejecutivo</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link link" href="./reservas.html">Reservas</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link active link" href="./contacto.html">Contacto</a>
-              </li>
-            </ul>
-          </div>
+  <header class="fondo">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fondo__menu">
+        <div class="logo">   
+         <a href="./index.html"> <img src="./imagenes/logo.png" width="300px" height="50px" alt=""> </a>
         </div>
-      </nav>
- <h1>
-     Panza & Corazón
- </h1>   
- <a href="reservas.html#Reservas">
-   <button class="boton-reservar">RESERVA TU LUGAR</button>
-  </a>          
-</header>
-  <main>
+        <div class="container-fluid display">
+            <a class="navbar-brand" href="#"></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav menunav">
+                <li class="nav-item">
+                  <a class="nav-link active link" aria-current="page" href="index.html#Nosotros">Nosotros</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link link" href="index.html#Galeria">Galeria</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link link" href="./sucursales.html">Sucursales</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link link" href="./menu-ejecutivo.html">Menu Ejecutivo</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link link" href="./reservas.html">Reservas</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link link" href="./contacto.html">Contacto</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
+   <h1>
+       Panza & Corazón
+   </h1>  
+   <div class="fondo__redes bg-dark">
+    <a href=" " >
+      <img class="img-footer" src="./imagenes/logo-facebook-24px.png" alt="icono de twitter">
+    </a>
+    <a href="">
+      <img src="./imagenes/logo-instagram-24px.png" alt="icono de pinstragram">
+    </a>
+    <a href=""> 
+      <img src="./imagenes/logo-twitter-24px.png" alt="icono de facebook">
+     </a>
+    </div>
+   <a href="reservas.html#Reservas"><button class="boton-reservar">RESERVA TU LUGAR</button></a>       
+</header>   <main>
     <section class="contenedorContacto1">
       <div class="bife-contacto"></div>
       <div class="texto-contacto">
