--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
        <h1>
            Panza & Corazón
        </h1>  
-       <div class="fondo__redes">
-        <a href=" ">
+       <div class="fondo__redes bg-dark">
+        <a href=" " >
           <img class="img-footer" src="./imagenes/logo-facebook-24px.png" alt="icono de twitter">
         </a>
         <a href="">
@@ -120,8 +120,7 @@
               <button class="boton-teEsperamos">
               ¡TE ESPERAMOS!
               </button>
-            </a>
-       
+            </a>      
           </div>
           <div class="container-img-terceraSeccion">
             <img src="./imagenes/img-terceraSeccion.png" alt="">
