--- a/sucursales.html
+++ b/sucursales.html
@@ -20,9 +20,9 @@
 <body>
   <header class="fondo">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fondo__menu">
-      <div class="logo">
-        <a href="./index.html"> <img src="./imagenes/logo.png" width="300px" height="50px" alt=""> </a>
-       </div>
+        <div class="logo">   
+         <a href="./index.html"> <img src="./imagenes/logo.png" width="300px" height="50px" alt=""> </a>
+        </div>
         <div class="container-fluid display">
             <a class="navbar-brand" href="#"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,13 +31,13 @@
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav menunav">
                 <li class="nav-item">
-                  <a class="nav-link link" aria-current="page" href="./index.html#Nosotros">Nosotros</a>
+                  <a class="nav-link active link" aria-current="page" href="index.html#Nosotros">Nosotros</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link link" href="./index.html#Galeria">Galeria</a>
+                  <a class="nav-link link" href="index.html#Galeria">Galeria</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active link" href="./sucursales.html">Sucursales</a>
+                  <a class="nav-link link" href="./sucursales.html">Sucursales</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link link" href="./menu-ejecutivo.html">Menu Ejecutivo</a>
@@ -54,40 +54,51 @@
         </nav>
    <h1>
        Panza & Corazón
-   </h1> 
-   <a href="reservas.html#Reservas"><button class="boton-reservar">RESERVA TU LUGAR</button></a>            
-</header>  
+   </h1>  
+   <div class="fondo__redes bg-dark">
+    <a href=" " >
+      <img class="img-footer" src="./imagenes/logo-facebook-24px.png" alt="icono de twitter">
+    </a>
+    <a href="">
+      <img src="./imagenes/logo-instagram-24px.png" alt="icono de pinstragram">
+    </a>
+    <a href=""> 
+      <img src="./imagenes/logo-twitter-24px.png" alt="icono de facebook">
+     </a>
+    </div>
+   <a href="reservas.html#Reservas"><button class="boton-reservar">RESERVA TU LUGAR</button></a>       
+</header> 
  <main>
-      <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+      <div id="carouselExampleDark" class="carousel carousel-dark slide contenedorCarousel" data-bs-ride="carousel">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
           <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
           <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
         </div>
-        <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="10000">
+        <div class="carousel-inner contenedorCarousel2">
+          <div class="carousel-item active contenedorCarousel3" data-bs-interval="10000">
             <img src="./imagenes/Sucursales1.jpg" class="d-block w-100" alt="Sucursal de San Isidro">
             <div class="carousel-caption d-none d-md-block titulo-sucursales">
-              <h5 class="display-1 ">San Isidro</h5>
+              <h5 class="display-1">San Isidro</h5>
               <p>Tel 4455-4589</p>
             </div>
           </div>
-          <div class="carousel-item" data-bs-interval="2000">
+          <div class="carousel-item contenedorCarousel3" data-bs-interval="2000">
             <img src="./imagenes/Sucursales2.jpg" class="d-block w-100" alt="Sucursal de Puerto Madero">
             <div class="carousel-caption d-none d-md-block titulo-sucursales">
               <h5 class="display-1 titulo-puertomadero">Puerto Madero</h5>
               <p>Tel 4596-9785</p>
             </div>
           </div>
-          <div class="carousel-item">
+          <div class="carousel-item contenedorCarousel3">
             <img src="./imagenes/Sucursales5.jpg" class="d-block w-100" alt="Sucursal de Belgrano">
             <div class="carousel-caption d-none d-md-block titulo-sucursales">
               <h5 class="display-1 titulo">Belgrano</h5>
               <p>Tel 4152-9532</p>
             </div>
           </div>
-            <div class="carousel-item">
+            <div class="carousel-item contenedorCarousel3">
               <img src="./imagenes/Sucursales4.jpg" class="d-block w-100" alt="Sucursal de Palermo">
               <div class="carousel-caption d-none d-md-block titulo-sucursales">
                 <h5 class="display-1 titulo">Palermo</h5>
